[package]
name = "rustflow"
version = "0.1.0"
authors = ["Bartłomiej Kuras <hash.deb@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tf = { package="tensorflow-sys", version = "0.16.0" }
failure = "0.1"

[features]
tensorflow_gpu = ["tf/tensorflow_gpu"]
